nginx-ingress-controller/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: request-info
  name: request-info
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: request-info
  type: LoadBalancer
status:
  loadBalancer: {}
